New Update Owner Css

--- a/Owner.css
+++ b/Owner.css
@@ -84,7 +84,7 @@ element.style {
 #user-rollover.id-3669054 > .info > .role span:after
 {
     visibility: visible;
-    content:'/Promoter';
+    content:'/Co-Host';
 
 /* MsiGaming | Developer = 3669054 */
 
