--- a/Owner.css
+++ b/Owner.css
@@ -51,8 +51,8 @@ element.style {
 }
 
 #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after {
-    content: 'TM Owner/Developer';
-    background: url('http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png');
+    content: '';
+    background: url('');
     padding: 3px 6px;
     color: ;
     bottom: 20px;
@@ -138,11 +138,3 @@ element.style {
     top: 121px;
     left: 110px;
 }
-
-#chat [data-cid^='3669054-'] .un{
-    animation: rainbow 2s linear infinite;
-}
-@keyframes rainbow {
-    0% {  filter: hue-rotate(0deg);  }
-  100% {  filter: hue-rotate(360deg);  }
-}    
