--- a/TM.css
+++ b/TM.css
@@ -9,6 +9,25 @@
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Custom.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/WAM.css");
 
+#room-bar .icon-room {
+    background: url('https://i.imgur.com/1OMeuwu.png') no-repeat;
+    top: 32px;
+    left: 32px;
+}
+
+i.icon.icon-room {
+    background: url('https://i.imgur.com/1OMeuwu.png') no-repeat;
+    width: 32px;
+    height: 32px;
+}
+
+.icon-room {
+    background: url('https://i.imgur.com/1OMeuwu.png') no-repeat;
+    width: 32px;
+    height: 32px;
+    background-size: 50%;
+}
+
 #room-settings .general-settings .option button.off {
     background: linear-gradient(to bottom right, #314673, #263344);
 }
