--- a/TM.css
+++ b/TM.css
@@ -9,6 +9,7 @@
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Custom.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/WAM.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Theme");
+@import url("https://rawgit.com/TitanMusicDev/TMCss/master/Rank/Roles");
 
 
 #room-settings .general-settings .option button.off {
