--- a/Owner.css
+++ b/Owner.css
@@ -22,7 +22,7 @@ element.style {
 }
 
 #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before {
-    content: url("http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png");
+    content: url("");
     top: 3px;
     left: -3px;
     position: relative;
@@ -50,7 +50,7 @@ element.style {
 }
 
 #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before {
-    content: url("http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png");
+    content: url("");
     top: 120px;
     left: 109px;
     position: absolute;
