--- a/Custom.css
+++ b/Custom.css
@@ -250,3 +250,84 @@
 .communities .grid .cell:hover>.meta {
   background: rgba(0,0,0,.8);
 }
+/*--------------------------------------------------------------------------------\
+|    	Backgrounds
+ \--------------------------------------------------------------------------------*/
+
+/* APP MENU LEFT */
+
+#app-menu.open, #playlist-panel, #history-panel, #user-view, #dashboard, #room-settings {
+    background-image: url("https://i.imgur.com/PEhIYQd.jpg?1");
+    background-size: cover;
+}
+
+/*--------------------------------------------------------------------------------\
+|		Background AVATAR
+ \--------------------------------------------------------------------------------*/
+
+#user-menu .avatar {
+    box-shadow: inset 0 0 30px rgba(0,0,0,.5);
+    -webkit-box-shadow: inset 0 0 30px rgba(0,0,0,.5);
+    background: url("https://i.imgur.com/3moYyb0.jpg?1");
+}
+
+.user-content .grid .cell .top {
+    background: url("https://i.imgur.com/3moYyb0.jpg?1") no-repeat ;
+    background-size: 185px 175px ;
+    box-shadow: inset 0 0 30px rgba(0,0,0,.5);
+    -webkit-box-shadow: inset 0 0 30px rgba(0,0,0,.5);
+}
+
+/*--------------------------------------------------------------------------------\
+|		Backgrounds 
+ \--------------------------------------------------------------------------------*/
+
+/* BLACK TRANSPARENT 75 OPACITY */
+
+#room .app-right {
+    background: rgba(0,0,0,.75);
+}
+
+/* BLACK TRANSPARENT 50 OPACITY */
+
+#room-settings-menu {
+    background: rgba(0,0,0,.5);
+}
+
+/* BLACK TRANSPARENT 30 OPACITY */
+
+#chat .cm:nth-child(2n+1) {
+    background-color: rgba(0,0,0,.3);
+}
+
+/*--------------------------------------------------------------------------------\
+|		Backgrounds 
+ \--------------------------------------------------------------------------------*/
+
+/*  */
+
+/* TO LEFT > TRANSPARENT */
+
+.app-right .jspContainer {
+    background: linear-gradient(to right, rgba(214, 23, 23, .3), transparent);
+}
+
+/* TO LEFT > #000 */
+
+#user-menu {
+    background: linear-gradient(to right, rgba(214, 23, 23, .3), rgba(0,0,0,.5));
+}
+
+/* TO LEFT BOTTOM > #000 */
+
+#footer-user .info, .communities .grid .cell .favorite {
+    background: linear-gradient(to left bottom, rgba(214, 23, 23, 1), #000);
+}
+
+/*--------------------------------------------------------------------------------\
+|		Backgrounds TRANSPARENTES
+ \--------------------------------------------------------------------------------*/
+
+#app-menu, #app-menu.open .list, #waitlist .list .user, #user-view .jspContainer, .user-content.profile .points .subscribe-button {
+    background: transparent;
+}
