--- a/Bot.css
+++ b/Bot.css
@@ -1,1 +1,72 @@
+#user-rollover.is-staff.id-20168147 .info .role span {
+    display: none;
+}
 
+#user-rollover.id-20168147 .level:after {
+    position: absolute;
+    content: url('http://i.imgur.com/xa4FR0w.png');
+    left: 170px;
+    top: 3px;
+}
+
+#user-rollover.id-20168147 .info .badge-box:after {
+    content: "TMChatBot";
+    position: absolute;
+    top: 6px;
+    left: 228px;
+    color: #ac76ff;
+    font-weight: bold;
+    font-size: 13px;
+}
+
+#user-rollover.id-20168147 .info .role i {
+    display: none;
+}
+
+/* BOT */
+
+#chat-messages [data-cid^="20168147-"] .timestamp, #chat [data-cid^="20168147-"].emote .timestamp {
+    color: #ac76ff ;
+}
+
+#user-lists .list .user.id-20168147 .name:after, #user-rollover.id-20168147 .meta .username:after, #chat [data-cid^='20168147-'] .un:after {
+    content: "BOT";
+    margin-left: 5px;
+    background: rgba(0,0,0,.3);
+    padding: 0px 5px;
+    border: 1px solid rgba(172, 118, 255,.3);
+    border-radius: 5px;
+    color: #ac76ff;
+    font-size: 10px;
+}
+
+#chat [data-cid^="20168147-"].message .timestamp {
+    color: #ac76ff ;
+}
+
+#chat [data-cid^="20168147-"] .icon, #chat .id-19129619 .icon {
+    display: none ;
+}
+
+#user-rollover.id-20168147 .username, #user-lists .list .user.id-20168147 .name, #user-rollover.id-20168147 .username, #chat [data-cid^='20168147-'] .un {
+    color: #ac76ff ;
+}
+
+#chat-messages [data-cid^="20168147-"] .text {
+    font-weight: bold;
+}
+
+#chat-messages [data-cid^="20168147-"] .msg {
+    font-weight: bold;
+}
+
+#chat [data-cid^='20168147-'] {
+    background: transparent;
+    box-shadow: inset 0 1.5px 0 rgba(172, 118, 255,.3), inset 0 -1.5px 0 rgba(172, 118, 255,.3);
+}
+
+#chat [data-cid^='20168147-'] .from {
+    background: linear-gradient(to right, rgba(172, 118, 255,.3), transparent);
+    padding: 3px 0 3px 10px;
+    border-radius: 10px 0 0 10px;
+}
