--- a/Owner.css
+++ b/Owner.css
@@ -1,52 +1,25 @@
-/* xUndisputed = 3669054 */
-
-#user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
-    height: 150px;
+#user-rollover.is-staff.id-3669054 .info .role span {
+    display: none;
 }
 
-element.style {
-    height: 150px;
-}
-
-#user-rollover .meta {
-    min-height: 150px;
-}
-
-#chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before {
-    content: url("https://i.imgur.com/tT2beq5.png?1");
-    top: 3px;
-    left: -3px;
-    position: relative;
-}
-
-#chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un {
-    top: -3px ;
-    position: relative;
-}
-
-#user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
-    height: 150px ;
-}
-
-#user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before {
-    content: url("");
-    top: 120px;
-    left: 109px;
+#user-rollover.id-3669054 .info .badge-box:after {
+    content: "BOSS";
     position: absolute;
+    top: 6px;
+    left: 228px;
+    color: #00e600;
+    font-weight: bold;
+    font-size: 13px;
 }
 
-#user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after {
-    content: 'TM Owner/Developer';
-    color: blue;
-    position: absolute;
-    top: 118px;
-    left: 130px;
+#user-rollover.id-3669054 .info .role i {
+    display: none;
 }
 
-#user-rollover.id-3669054 > .info > .role span:after {
-    visibility: visible;
-    content: '/Host';
-    /* xUndisputed = 3669054 */
+/* BOSS */
+
+#chat-messages [data-cid^="3669054-"] .timestamp, #chat [data-cid^="3669054-"].emote .timestamp {
+    color: #00e600 ;
 }
 
 #user-lists .list .user.id-3669054 .name:after, #user-rollover.id-3669054 .meta .username:after, #chat [data-cid^='3669054-'] .un:after {
@@ -56,6 +29,37 @@ element.style {
     padding: 0px 5px;
     border: 1px solid rgba(172, 118, 255,.3);
     border-radius: 5px;
-    color: #ac76ff;
+    color: #00e600;
     font-size: 10px;
+}
+
+#chat [data-cid^="3669054-"].message .timestamp {
+    color: #00e600 ;
+}
+
+#chat [data-cid^="3669054-"] .icon, #chat .id-3669054 .icon {
+    display: none ;
+}
+
+#user-rollover.id-3669054 .username, #user-lists .list .user.id-3669054 .name, #user-rollover.id-3669054 .username, #chat [data-cid^='3669054-'] .un {
+    color: #00e600 ;
+}
+
+#chat-messages [data-cid^="3669054-"] .text {
+    font-weight: bold;
+}
+
+#chat-messages [data-cid^="3669054-"] .msg {
+    font-weight: bold;
+}
+
+#chat [data-cid^='3669054-'] {
+    background: transparent;
+    box-shadow: inset 0 1.5px 0 rgba(172, 118, 255,.3), inset 0 -1.5px 0 rgba(172, 118, 255,.3);
+}
+
+#chat [data-cid^='3669054-'] .from {
+    background: linear-gradient(to right, rgba(172, 118, 255,.3), transparent);
+    padding: 3px 0 3px 10px;
+    border-radius: 10px 0 0 10px;
 }
