--- a/Bot.css
+++ b/Bot.css
@@ -10,7 +10,7 @@
 }
 
 #user-rollover.id-20168147 .info .badge-box:after {
-    content: "TMChatBot";
+    content: "TMBot";
     position: absolute;
     top: 6px;
     left: 228px;
