--- a/TM.css
+++ b/TM.css
@@ -9,4 +9,5 @@
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Custom.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/WAM.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Theme");
+@import url("https://rawgit.com/TitanMusicDev/TMCss/master/New/TM.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Rank/Roles");
